overflow fix

--- a/assests/style.css
+++ b/assests/style.css
@@ -1,6 +1,7 @@
 .home-html, body {
-    width: 100%;
     height: 100%;
+    overflow: auto;
+    width: 100%;
     /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5); */
 }
 
